@@ -24,6 +24,7 @@ Versionsänderungen:
 - Bugfix bei Anzeige des Raumes und des Bildes in der Sidebar über die Metabox "Ansprechpartner"    
 - auf Kontaktseite ID der aktuellen Person in Kontexthilfe eingebunden    
 - zusätzliche Spalte ID in Kontaktübersicht eingefügt    
+- Einbindung von Sprechzeiten aus UnivIS    
 
 ####Version 2.2.0:    
 - Standard-Kontakt-Übersichtsseite kann mit einer eigens gestaltbaren Seite überschrieben werden, diese muss den Slug "person" haben        
